--- a/src/content/docs/projects/sharktrack.mdx
+++ b/src/content/docs/projects/sharktrack.mdx
@@ -1,6 +1,6 @@
 ---
 title: SharkTrack
-description: landing page for personal website of Filippo Varini fvarini
+description: sharktrack, an AI-enhanced pipeline to analyse BRUVS videos of sharks and rays with Machine Learning
 template: splash
 
 hero:
