--- a/src/content/docs/projects/sharktrack.mdx
+++ b/src/content/docs/projects/sharktrack.mdx
@@ -9,7 +9,7 @@ hero:
     file: ../../../assets/detection_example.png
   actions:
       - text: Get Started
-        link: http://sharktrack.wildflow.ai/docs
+        link: https://github.com/filippovarini/sharktrack?tab=readme-ov-file#sharktrack
         icon: open-book
         variant: primary
       - text: Check it on GitHub
