compute maxn link

--- a/src/content/docs/projects/sharktrack.mdx
+++ b/src/content/docs/projects/sharktrack.mdx
@@ -12,9 +12,9 @@ hero:
         link: https://github.com/filippovarini/sharktrack?tab=readme-ov-file#sharktrack
         icon: open-book
         variant: primary
-      - text: Reach out
-        link: mailto:fppvrn@gmail.com
-        icon: email
+      - text: Compute MaxN
+        link: https://sharktrack.wildflow.ai/
+        icon: magnifier
 ---
 import { Aside } from '@astrojs/starlight/components';
 
