--- a/src/content/docs/projects/sharktrack.mdx
+++ b/src/content/docs/projects/sharktrack.mdx
@@ -107,7 +107,7 @@ This software was written and supported by the efforts of
 - [Prof Ben Glocker](https://www.imperial.ac.uk/people/b.glocker)
 - [Prof Francesco Ferretti](https://ferrettigs.github.io/)
 
-We would also like to thank [Natalie Ng](https://www.linkedin.com/in/natalie-ng-951964255/), [Rui Wen Lim](https://www.linkedin.com/in/rui-wen-lim-223140235/), [Michael Sellgren](https://www.linkedin.com/in/michael-sellgren/), [Lara Tse](https://www.linkedin.com/in/lara-tse-264505209), [Steven Chen](https://www.linkedin.com/in/stevenchenwaiho)
+We would also like to thank [Natalie Ng](https://www.linkedin.com/in/natalie-ng-951964255/), [Rui Wen Lim](https://www.linkedin.com/in/rui-wen-lim-223140235/), [Michael Sellgren](https://www.linkedin.com/in/michael-sellgren/), [Lara Tse](https://www.linkedin.com/in/lara-tse-264505209), [Steven Chen](https://www.linkedin.com/in/stevenchenwaiho) for their invaluable contribution!
 
 ## Collaborations
 ### License & Citation
