improve sharktrack page; add trailer

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -14,7 +14,7 @@ hero:
 banner:
   content: |
     We are deploying SharkTrack in more than 5 countries.
-    <a href="/projects/sharktrack/">Check it out!</a>
+    <a href="/sharktrack/">Check it out!</a>
 ---
 
 import { Card, CardGrid, LinkCard } from '@astrojs/starlight/components';
@@ -26,7 +26,7 @@ import { Card, CardGrid, LinkCard } from '@astrojs/starlight/components';
 	<LinkCard
 	title="🦈 SharkTrack"
 	description="An AI-Enhanced Pipeline to analyse videos (BRUVS) of Sharks and Rays in near-instant time."
-	href="/projects/sharktrack/"
+	href="/sharktrack/"
 	target="_blank"
 	/>
 	<LinkCard
