reach out for list of users

--- a/src/content/docs/sharktrack.mdx
+++ b/src/content/docs/sharktrack.mdx
@@ -104,6 +104,8 @@ SharkTrack is currently being used by the following organisations and in the fol
 - Cabo Verde, by Dr. Francesco Garzon, University of Exeter
 - Red Sea, by Dr. Francesco Garzon, University of Exeter
 
+Please [reach out](mailto:fppvrn@gmail.com) to be added to the list!
+
 
 
 ## Contributors
