--- a/src/content/docs/sharktrack.mdx
+++ b/src/content/docs/sharktrack.mdx
@@ -23,7 +23,7 @@ import { Aside } from '@astrojs/starlight/components';
 SharkTrack is an AI-enhanced software used by researchers [worldwide](#list-of-people-using-it) to analyse BRUVS videos 33 times faster.
 ### SharkTrack Trailer
 <div>
-<iframe width="560" height="315" src="https://youtu.be/NeBcpscTc3M" title="SharkTrack Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/NeBcpscTc3M?si=vIklOFr9nRxDDm4w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 ## Contents
 
