add palantir experience

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -26,8 +26,14 @@ import { Aside } from '@astrojs/starlight/components';
 <CardGrid stagger>
 	<LinkCard
 	title="🦈 SharkTrack"
-	description="An AI-Enhanced Pipeline to analyse videos (BRUVS) of Sharks and Rays in near-instant time."
+	description="A Machine Learning software that researchers use worldwide to analyse underwater videos (BRUVS) in near-instant time."
 	href="/sharktrack/"
+	target="_blank"
+	/>
+	<LinkCard
+	title="📡 Palantir Technologies"
+	description="I deployed advanced technology to real world use cases at this world leading data company, delivering and creating multi-milion dollar contracts in the aviation and climate change sector."
+	href="https://www.palantir.com/"
 	target="_blank"
 	/>
 	<LinkCard
