revert to initial path

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -55,42 +55,42 @@ I offer consultancy services for developing Machine Learning systems for Ocean C
 
 ## News
 <Card>
-	<img src="../../assets/sharktrack-poster.jpg" class="card-image" />
+	<img src="./src/assets/sharktrack-poster.jpg" class="card-image" />
 	<div class="card-text">
 		<p class="card-text-title"><a href="https://fishaiconsortium.org/meetings_seminars.html#sharktrack-a-ai-enhanced-software-for-20x-faster-shark-and-ray-underwater-video-analysis">Seminar Presentation: SharkTrack: AI-enhanced video analysis of sharks and rays</a></p>
 		<p class="card-text-body">04/10/2024: Hosted by the FishAI Consortium, describe how to deploy the open-source SharkTrack software, as well as future development perspectives in the Ocean Vision AI domain.</p>
 	</div>
 </Card>
 <Card>
-	<img src="../../assets/sharktrack-paper.png" class="card-image" />
+	<img src="./src/assets/sharktrack-paper.png" class="card-image" />
 	<div class="card-text">
 		<p class="card-text-title"><a href="https://arxiv.org/abs/2407.20623">PrePrint Available: SharkTrack: an accurate, generalisable software for streamlining shark and ray underwater video analysis</a></p>
 		<p class="card-text-body">25/09/2024: Filippo Varini, Joel H. Gayford, Jeremy Jenrette, Matthew J. Witt, Francesco Garzon, Francesco Ferretti, Sophie Wilday, Mark E. Bond, Michael R. Heithaus, Danielle Robinson, Devon Carter, Najee Gumbs, Vincent Webster, Ben Glocker</p>
 	</div>
 </Card>
 <Card>
-	<img src="../../assets/open-day.jpg" class="card-image"/>
+	<img src="./src/assets/open-day.jpg" class="card-image"/>
 	<div class="card-text">
 		<p class="card-text-title">SharkTrack nominated Outstanding Project by Imperial College</p>
 		<p class="card-text-body">25/06/2024: The project was awarded the Imperial Solidatus Project Prize and was presented at the Imperial College Open Day</p>
 	</div>
 </Card>
 <Card>
-	<img src="../../assets/obt-expedition.JPG" class="card-image" />
+	<img src="./src/assets/obt-expedition.JPG" class="card-image" />
 	<div class="card-text">
 		<p class="card-text-title"><a href="https://youtu.be/NeBcpscTc3M?si=xmmZ0TNKogB5f1mT">SharkTrack deployed in the Revillagigedo Archipelago</a></p>
 		<p class="card-text-body">01/06/2024: In collaboration with Pelagios Kakunja and Ocean Blue Tree, we deployed SharkTrack in the biggest MPA of North America, in a 3-week boat expedition to the archipelago</p>
 	</div>
 </Card>
 <Card>
-	<img src="../../assets/cec-final.jpeg" class="card-image" />
+	<img src="./src/assets/cec-final.jpeg" class="card-image" />
 	<div class="card-text">
 		<p class="card-text-title"><a href="https://www.linkedin.com/posts/filippo-varini_and-thats-a-wrap-for-climate-pre-accelerator-activity-7069947805267570688-Ty5h?utm_source=share&utm_medium=member_desktop">Imperial Climate Pre Accelerator Cohort 1 completed!</a></p>
 		<p class="card-text-body">30/05/2023: The Cohort 1 supported 103 climate entrepreneurs to launch 13 Climate Tech startups. The pitch day awarded £4,000 in prizes and was attended by 100 partners and investors.</p>
 	</div>
 </Card>
 <Card>
-	<img src="../../assets/inauguration.jpg" class="card-image" />
+	<img src="./src/assets/inauguration.jpg" class="card-image" />
 	<div class="card-text">
 		<p class="card-text-title"><a href="https://www.forbes.com/sites/mariannelehnis/2023/03/02/why-imperial-college-launched-a-climatetech-pre-accelerator/">Imperial Climate Pre Accelerator was featured in Forbes</a></p>
 		<p class="card-text-body">03/03/2023: The startup accelerator inaugurated the Cohort 1 with 103 climate entrepreneurs from 7 universities worldwide.</p>
