update sharktrack doc

--- a/src/content/docs/sharktrack.mdx
+++ b/src/content/docs/sharktrack.mdx
@@ -40,22 +40,22 @@ SharkTrack is a Machine Learning model that uses computer vision to detect and t
 
 
 ## How does SharkTrack work?
-SharkTrack analyses BRUVS in two steps, as showed in Fig. 3:
+SharkTrack analyses BRUVS in two steps, as showed below:
+![](../../assets/figure1.png)
+*The SharkTrack pipeline to compute MaxN, divided into Step 1 (top) and Step 2 (bottom)*
+
 ##### Step 1: Automatic Processing
 - (a) Ingests all underwater videos in a hard drive or folder
 - (b) Automatically detects elasmobranchs 
 - (c) Save sightings in a CSV
 - (d) Save a screenshot for each detected elasmobranch with video
 ![](../../assets/example_detection.jpg)
-*Figure 2: Each detection image shows the video and time it was captured* 
+*Each detection image shows the video and time it was captured* 
 
 ##### Step 2: Manual Review
 - (e) Classify the species of detected elasmobranchs by renaming the relative screenshot filename.
 - (f) SharkTrack updates all sightings of detected elasmobranchs with the new species classification
 - (g) And outputs the species-specific MaxN
-
-![](../../assets/figure1.png)
-*Figure 3: The SharkTrack pipeline to compute MaxN, divided into Step 1 (top) and Step 2 (bottom)*
 
 ## How it can help you?
 - 👀 **Peek Mode** After a day of sampling, run it on your laptop overnight and automatically detect where and when sharks and rays appeared in the videos.
