update sharktrack doc

--- a/src/content/docs/sharktrack.mdx
+++ b/src/content/docs/sharktrack.mdx
@@ -116,5 +116,5 @@ This is the first step of a broader effort to develop generalisable marine speci
 
 
 ## Next Stpes
-Run the model on your BRUVS by following [this guide](https://github.com/filippovarini/sharktrack/issues)
+Run the model on your BRUVS by following [this guide](https://github.com/filippovarini/sharktrack/blob/master/sharktrack-user-guide.md)
 
