--- a/src/content/docs/sharktrack.mdx
+++ b/src/content/docs/sharktrack.mdx
@@ -75,16 +75,19 @@ Reach out if have any quesions [here]((mailto:fppvrn@gmail.com?subject=SharkTrac
 
 
 ## Where has SharkTrack being used?
-- [Anguilla by University of Exeter and Anguilla National Trust](https://www.linkedin.com/posts/filippo-varini_we-are-back-from-university-of-exeter-activity-7167899292593065985-dZLo?utm_source=share&utm_medium=member_desktop)
-- [Revillagigedo Archipelago, Mexico by Pelagios Kakunja](https://youtu.be/NeBcpscTc3M?si=BfyYM4jQ0-NDCKZZ)
-- La Paz, Mexico by Pelagios Kakunja
-- Northern Gulf of California, Mexico by Pelagios Kakunja
-- Maldives, by the University of Leeds
-- Cabo Verde, by Dr. Francesco Garzon and Adam Whiting of the University of Exeter
-- Red Sea, by Dr. Francesco Garzon, University of Exeter
-- Cape Cod, by the Virginia Tech University
-- Hawaii, by the Virginia Tech University
-- Azores, by the Okeanos Institute of Marine Sciences
+1. [Anguilla by University of Exeter and Anguilla National Trust](https://www.linkedin.com/posts/filippo-varini_we-are-back-from-university-of-exeter-activity-7167899292593065985-dZLo?utm_source=share&utm_medium=member_desktop)
+2. [Revillagigedo Archipelago, Mexico by Pelagios Kakunja](https://youtu.be/NeBcpscTc3M?si=BfyYM4jQ0-NDCKZZ)
+3. La Paz, Mexico by Pelagios Kakunja
+4. Northern Gulf of California, Mexico by Pelagios Kakunja
+5. Maldives, by the University of Leeds
+6. Cabo Verde, by Dr. Francesco Garzon and Adam Whiting of the University of Exeter
+7. Red Sea, by Dr. Francesco Garzon, University of Exeter
+8. Cape Cod, by the Virginia Tech University
+9. Hawaii, by the Virginia Tech University
+10. Azores, by the Okeanos Institute of Marine Sciences
+11. Bangkok, Thailand by [Metavee Chuangcharoendee from Thai Sharks and Rays](https://www.reshark.org/star-project)
+12. Maya Bay, Phi Phi Islands, Thailand AND Koh Tao, Thailand by Scarlett Taylor from  Thai Department of Marine and Coastal Resources (DMCR)
+13. Scotland, UK by Tash Yates from Edinburgh Napier University
 
 ## Contributors
 This software and related work was supported by the efforts of Filippo Varini, Joel H. Gayford, Jeremy Jenrette, Matthew J. Witt, Francesco Garzon, Francesco Ferretti, Sophie Wilday, Mark E. Bond, Michael R. Heithaus, Danielle Robinson, Devon Carter, Najee Gumbs, Vincent Webster, Ben Glocker, Fabio De Sousa Ribeiro, Rajat Rasal, Orlando Timmerman, Natalie Ng, Rui Wen Lim, Michael Sellgren, Lara Tse, Steven Chen, Maria Pia Donrelas, Manfredi Minervini, Xuen Bei (Bay) Chin, Adam Whiting, Aurora Crocini, Gabriele Bai, Stephanie Guerinfor.
