--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -3,7 +3,7 @@ title: Hello! I am Filippo
 description: landing page for personal website of Filippo Varini fvarini
 template: splash
 hero:
-  tagline: I am a researcher in Machine Learning for Ocean Conservation from Imperial College London. I love connecting to the ocean through any means, from freediving to computing. Share with me your ways to connect!
+  tagline: I am a researcher in Machine Learning for Ocean Conservation from Imperial College London, now developing Computer Vision to classify sharks, deep sea corals and more!
   image:
     file: ../../assets/profile.jpeg
   actions:
